--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,14 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.idea/
+.idea/$PRODUCT_WORKSPACE_FILE$
+.idea/.gitignore
+.idea/compiler.xml
+.idea/libraries/
+.idea/maven2017.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+target/generated-sources/
+target/generated-test-sources/
